--- a/index.html
+++ b/index.html
@@ -4,32 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>fairy forest</title>
 
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/app.js" defer></script>
   </head>
   <body>
-    <header class="main-header"></header>
-    <div class="layers">
-      <div class="layers__header">
-        <div class="layers__caption">Welcome to Parallax</div>
-        <div class="layers__title">Fairy Forest</div>
+    <header class="main-header">
+      <div class="layers">
+        <div class="layer__header">
+          <div class="layers__caption">Welcome to Parallax</div>
+          <div class="layers__title">Fairy Forest</div>
+        </div>
+        <div class="layer layers__base" style="background-image: url(img/layer-base.png);"></div>
+        <div class="layer layers__middle" style="background-image: url(img/layer-middle.png);"></div>
+        <div class="layer layers__front" style="background-image: url(img/layer-front.png);"></div>
       </div>
-
-      <div
-        class="layer layers__base"
-        style="background-image: url(img/layer-base.png)"
-      ></div>
-      <div
-        class="layer layers__title"
-        style="background-image: url(img/layer-middle.png)"
-      ></div>
-      <div
-        class="layer layers__front"
-        style="background-image: url(img/layer-front.png)"
-      ></div>
-    </div>
+    </header>
 
     <article
       class="main-article"
