--- a/index.html
+++ b/index.html
@@ -7,35 +7,53 @@
     <title>fairy forest</title>
 
     <link rel="stylesheet" href="css/main.css" />
+
+    <script src="libs/gsap/gsap.min.js" defer></script>
+    <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
+    <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
+
     <script src="js/app.js" defer></script>
   </head>
   <body>
-    <header class="main-header">
-      <div class="layers">
-        <div class="layer__header">
-          <div class="layers__caption">Welcome to Parallax</div>
-          <div class="layers__title">Fairy Forest</div>
-        </div>
-        <div class="layer layers__base" style="background-image: url(img/layer-base.png);"></div>
-        <div class="layer layers__middle" style="background-image: url(img/layer-middle.png);"></div>
-        <div class="layer layers__front" style="background-image: url(img/layer-front.png);"></div>
-      </div>
-    </header>
+    <div class="wrapper">
+      <div class="content">
+        <header class="main-header">
+          <div class="layers">
+            <div class="layer__header">
+              <div class="layers__caption">Welcome to Parallax</div>
+              <div class="layers__title">Fairy Forest</div>
+            </div>
+            <div
+              class="layer layers__base"
+              style="background-image: url(img/layer-base.png)"
+            ></div>
+            <div
+              class="layer layers__middle"
+              style="background-image: url(img/layer-middle.png)"
+            ></div>
+            <div
+              class="layer layers__front"
+              style="background-image: url(img/layer-front.png)"
+            ></div>
+          </div>
+        </header>
 
-    <article
-      class="main-article"
-      style="background-image: url(img/dungeon.jpg)"
-    >
-      <div class="main-article__content">
-        <h2 class="main-article__header">To be continued</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-          consequatur, sit quaerat molestiae, perspiciatis voluptas minus
-          eligendi voluptate, quae earum atque. Amet id laudantium reprehenderit
-          ea incidunt nihil voluptas quo iusto nobis!
-        </p>
+        <article
+          class="main-article"
+          style="background-image: url(img/dungeon.jpg)"
+        >
+          <div class="main-article__content">
+            <h2 class="main-article__header">To be continued</h2>
+            <p class="main-article__paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis
+              error provident dignissimos facere. Repellendus tempore autem qui!
+              Quia magnam tempora esse id necessitatibus corrupti mollitia
+              expedita sapiente cum rerum, ut dicta laboriosam!
+            </p>
+          </div>
+          <div class="copy">© Dotcat</div>
+        </article>
       </div>
-      <div class="copy">© dotcat</div>
-    </article>
+    </div>
   </body>
 </html>
